--- a/assets/css/plugins/shapes.css
+++ b/assets/css/plugins/shapes.css
@@ -13,34 +13,31 @@
     height: 240px;
     background-color: var(--mf-color-blue);
     position: absolute;
-    z-index: -1;
+    z-index: -10;
 }
 
 .mf-bg-bubble-shape-bottom-right:after {
-    border-radius: 50% 0 0 50%;
-    inset-block-end: -1rem;
-    inset-inline-end: 0;
+    border-radius: 0 0 0 50%;
+    inset-block-end: 60%;
     inset-inline-end: 0;
 }
 
 .mf-bg-bubble-shape-bottom-left:after {
-    border-radius: 0 50% 50% 0;
+    border-radius: 0 0 50% 0;
     inset-block-end: 25%;
     inset-inline-start: 0;
-    inset-inline-end: 0;
 }
 
 @media screen and (min-width: 1200px) {
     .mf-bg-bubble-shape:after {
-        width: 600px;
-        height: 360px;
+        width: 40%;
     }
     .mf-bg-bubble-shape-bottom-right:after {
+        height: 60%;
         inset-block-end: 0;
     }
     .mf-bg-bubble-shape-bottom-left:after {
-        border-radius: 0 50% 50% 0;
+        height: 40%;
         inset-block-end: 0;
-        inset-inline-end: 0;
     }
 }
